examples/gateway-api/manifests/standard/tls-routing/tls-route-terminate.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: bar-route
spec:
  parentRefs:
  - name: example-gateway
    sectionName: tls-terminate
  hostnames:
  - "bar.example.com"
  rules:
  - backendRefs:
    - name: bar-svc
      port: 8080
---
# Following are resources not explicitely declared
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
