examples/gateway-api/manifests/standard/tls-routing/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: foo-route
spec:
  parentRefs:
  - name: example-gateway
    sectionName: tls
  hostnames:
  - "foo.example.com"
  rules:
  - backendRefs:
    - name: foo-svc
      port: 443
---
# Following are resources not explicitely declared
apiVersion: v1
kind: Service
metadata:
  name: foo-svc
